--- a/Rules_Provider/Complete/Other/OceanDNS.yaml
+++ b/Rules_Provider/Complete/Other/OceanDNS.yaml
@@ -24,13 +24,13 @@ payload:
   - DOMAIN,public.dns.iij.jp
   - IP-CIDR,1.0.0.1/32,no-resolve
   - IP-CIDR,1.1.1.1/32,no-resolve
-  - IP-CIDR,101.101.101.101,no-resolve
-  - IP-CIDR,101.102.103.104,no-resolve
+  - IP-CIDR,101.101.101.101/32,no-resolve
+  - IP-CIDR,101.102.103.104/32,no-resolve
   - IP-CIDR,103.197.104.178/32,no-resolve
   - IP-CIDR,103.197.106.75/32,no-resolve
   - IP-CIDR,104.236.210.29/32,no-resolve
   - IP-CIDR,109.69.8.51/32,no-resolve
-  - IP-CIDR,112.121.178.187,no-resolve
+  - IP-CIDR,112.121.178.187/32,no-resolve
   - IP-CIDR,149.112.112.112/32,no-resolve
   - IP-CIDR,156.154.70.1/32,no-resolve
   - IP-CIDR,156.154.70.5/32,no-resolve
@@ -38,8 +38,8 @@ payload:
   - IP-CIDR,156.154.71.5/32,no-resolve
   - IP-CIDR,168.126.63.1/32,no-resolve
   - IP-CIDR,168.126.63.2/32,no-resolve
-  - IP-CIDR,168.95.1.1,no-resolve
-  - IP-CIDR,168.95.192.1,no-resolve
+  - IP-CIDR,168.95.1.1/32,no-resolve
+  - IP-CIDR,168.95.192.1/32,no-resolve
   - IP-CIDR,185.222.222.222/32,no-resolve
   - IP-CIDR,185.228.168.10/32,no-resolve
   - IP-CIDR,185.228.168.168/32,no-resolve
@@ -53,42 +53,42 @@ payload:
   - IP-CIDR,194.242.2.9/32,no-resolve
   - IP-CIDR,195.46.39.39/32,no-resolve
   - IP-CIDR,195.46.39.40/32,no-resolve
-  - IP-CIDR,202.14.67.14,no-resolve
-  - IP-CIDR,202.14.67.4,no-resolve
-  - IP-CIDR,202.153.97.130,no-resolve
-  - IP-CIDR,202.153.97.2,no-resolve
-  - IP-CIDR,202.177.2.2,no-resolve
-  - IP-CIDR,202.177.2.3,no-resolve
-  - IP-CIDR,202.181.240.44,no-resolve
-  - IP-CIDR,202.67.240.222,no-resolve
-  - IP-CIDR,202.76.4.1,no-resolve
-  - IP-CIDR,202.76.4.2,no-resolve
+  - IP-CIDR,202.14.67.14/32,no-resolve
+  - IP-CIDR,202.14.67.4/32,no-resolve
+  - IP-CIDR,202.153.97.130/32,no-resolve
+  - IP-CIDR,202.153.97.2/32,no-resolve
+  - IP-CIDR,202.177.2.2/32,no-resolve
+  - IP-CIDR,202.177.2.3/32,no-resolve
+  - IP-CIDR,202.181.240.44/32,no-resolve
+  - IP-CIDR,202.67.240.222/32,no-resolve
+  - IP-CIDR,202.76.4.1/32,no-resolve
+  - IP-CIDR,202.76.4.2/32,no-resolve
   - IP-CIDR,202.79.32.33/32,no-resolve
   - IP-CIDR,202.79.32.34/32,no-resolve
-  - IP-CIDR,202.85.128.32,no-resolve
-  - IP-CIDR,202.85.128.33,no-resolve
-  - IP-CIDR,202.85.170.89,no-resolve
+  - IP-CIDR,202.85.128.32/32,no-resolve
+  - IP-CIDR,202.85.128.33/32,no-resolve
+  - IP-CIDR,202.85.170.89/32,no-resolve
   - IP-CIDR,203.112.2.4/32,no-resolve
   - IP-CIDR,203.189.136.148/32,no-resolve
-  - IP-CIDR,203.194.239.32,no-resolve
-  - IP-CIDR,203.198.7.66,no-resolve
-  - IP-CIDR,203.80.96.10,no-resolve
-  - IP-CIDR,203.80.96.9,no-resolve
+  - IP-CIDR,203.194.239.32/32,no-resolve
+  - IP-CIDR,203.198.7.66/32,no-resolve
+  - IP-CIDR,203.80.96.10/32,no-resolve
+  - IP-CIDR,203.80.96.9/32,no-resolve
   - IP-CIDR,208.67.220.220/32,no-resolve
   - IP-CIDR,208.67.222.222/32,no-resolve
   - IP-CIDR,209.88.198.133/32,no-resolve
-  - IP-CIDR,210.0.255.251,no-resolve
+  - IP-CIDR,210.0.255.251/32,no-resolve
   - IP-CIDR,216.146.35.35/32,no-resolve
   - IP-CIDR,216.146.36.36/32,no-resolve
-  - IP-CIDR,218.102.23.228,no-resolve
+  - IP-CIDR,218.102.23.228/32,no-resolve
   - IP-CIDR,37.235.1.174/32,no-resolve
   - IP-CIDR,37.235.1.177/32,no-resolve
   - IP-CIDR,4.2.2.1/32,no-resolve
   - IP-CIDR,4.2.2.2/32,no-resolve
   - IP-CIDR,45.11.45.11/32,no-resolve
   - IP-CIDR,45.55.155.25/32,no-resolve
-  - IP-CIDR,61.10.0.130,no-resolve
-  - IP-CIDR,61.10.1.130,no-resolve
+  - IP-CIDR,61.10.0.130/32,no-resolve
+  - IP-CIDR,61.10.1.130/32,no-resolve
   - IP-CIDR,64.6.64.6/32,no-resolve
   - IP-CIDR,64.6.65.6/32,no-resolve
   - IP-CIDR,66.220.18.42/32,no-resolve
