--- a/Rules_Provider/Complete/Other/OpenAI.yaml
+++ b/Rules_Provider/Complete/Other/OpenAI.yaml
@@ -1,46 +1,61 @@
 # > OpenAI
 # 总条数: 6条
 payload:
-# OpenAI
-  - DOMAIN-KEYWORD,openai
-  - DOMAIN-SUFFIX,ai.com
-  - DOMAIN-SUFFIX,cdn.oaistatic.com
-  - DOMAIN-SUFFIX,chatgpt.com
-  - DOMAIN-SUFFIX,o33249.ingest.sentry.io
-  - DOMAIN-SUFFIX,oaistatic.com
-  - DOMAIN-SUFFIX,oaiusercontent.com
-  - DOMAIN-SUFFIX,openai.com
-  - DOMAIN,chat.openai.com.cdn.cloudflare.net
-  - DOMAIN,openaiapi-site.azureedge.net
-  - DOMAIN,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
-  - DOMAIN,openaicomproductionae4b.blob.core.windows.net
-  - DOMAIN,production-openaicom-storage.azureedge.net
-
-# Coplict
-  - DOMAIN-SUFFIX,bing.com
-  - DOMAIN-SUFFIX,bingapis.com
-  - DOMAIN-SUFFIX,microsoft-falcon.io
-  - DOMAIN-SUFFIX,microsoftapp.net
-  - DOMAIN,api.msn.com
-  - DOMAIN,assets.msn.com
-  - DOMAIN,copilot.microsoft.com
-  - DOMAIN,location.microsoft.com
-  - DOMAIN,login.microsoftonline.com
-  - DOMAIN,self.events.data.microsoft.com
-
-  # > Gemini
-  - DOMAIN-SUFFIX,gemini.google.com
-  - DOMAIN,apis.google.com
-  - DOMAIN,colab.research.google.com
-  - DOMAIN,content-developerprofiles-pa.googleapis.com
-  - DOMAIN,generativelanguage.googleapis.com
-
-  # > Meta AI
-  - DOMAIN-SUFFIX,meta.ai
-
-  # > Perplexity AI
-  - DOMAIN-SUFFIX,perplexity.ai
-
-  # > Claude
-  - DOMAIN-SUFFIX,anthropic.com
-  - DOMAIN-SUFFIX,claude.ai
+    - DOMAIN,ai.google.dev
+    - DOMAIN,alkalicore-pa.clients6.google.com
+    - DOMAIN,alkalimakersuite-pa.clients6.google.com
+    - DOMAIN,openaiapi-site.azureedge.net
+    - DOMAIN,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
+    - DOMAIN,openaicomproductionae4b.blob.core.windows.net
+    - DOMAIN,production-openaicom-storage.azureedge.net
+    - DOMAIN,servd-anthropic-website.b-cdn.net
+    - DOMAIN,pplx-res.cloudinary.com
+    - DOMAIN-SUFFIX,chat.com
+    - DOMAIN-SUFFIX,groq.com
+    - DOMAIN-SUFFIX,notebooklm.google
+    - DOMAIN-SUFFIX,clipdrop.co
+    - DOMAIN-SUFFIX,dify.ai
+    - DOMAIN-SUFFIX,cursorapi.com
+    - DOMAIN-SUFFIX,meta.ai
+    - DOMAIN-SUFFIX,openart.ai
+    - DOMAIN-SUFFIX,openrouter.ai
+    - DOMAIN-SUFFIX,deepmind.com
+    - DOMAIN-SUFFIX,deepmind.google
+    - DOMAIN-SUFFIX,generativeai.google
+    - DOMAIN-SUFFIX,oaistatic.com
+    - DOMAIN-SUFFIX,cursor.com
+    - DOMAIN-SUFFIX,cursor-cdn.com
+    - DOMAIN-SUFFIX,x.ai
+    - DOMAIN-SUFFIX,grok.com
+    - DOMAIN-SUFFIX,oaiusercontent.com
+    - DOMAIN-SUFFIX,poecdn.net
+    - DOMAIN-SUFFIX,hf.co
+    - DOMAIN-SUFFIX,huggingface.co
+    - DOMAIN-SUFFIX,chatgpt.com
+    - DOMAIN-SUFFIX,poe.com
+    - DOMAIN-SUFFIX,cursor.sh
+    - DOMAIN-SUFFIX,pplx.ai
+    - DOMAIN-SUFFIX,openai.com
+    - DOMAIN-SUFFIX,sora.com
+    - DOMAIN-SUFFIX,perplexity.ai
+    - DOMAIN-SUFFIX,jasper.ai
+    - DOMAIN-SUFFIX,claudeusercontent.com
+    - DOMAIN-SUFFIX,claude.ai
+    - DOMAIN-SUFFIX,anthropic.com
+    - DOMAIN-SUFFIX,notebooklm.google.com
+    - DOMAIN-SUFFIX,turn.livekit.cloud
+    - DOMAIN-SUFFIX,host.livekit.cloud
+    - DOMAIN-SUFFIX,chatgpt.livekit.cloud
+    - DOMAIN-SUFFIX,bard.google.com
+    - DOMAIN-SUFFIX,gemini.google.com
+    - DOMAIN-SUFFIX,proactivebackend-pa.googleapis.com
+    - DOMAIN-SUFFIX,makersuite.google.com
+    - DOMAIN-SUFFIX,aistudio.google.com
+    - DOMAIN-SUFFIX,generativelanguage.googleapis.com
+    - DOMAIN-SUFFIX,geller-pa.googleapis.com
+    - DOMAIN-SUFFIX,gateway.ai.cloudflare.com
+    - DOMAIN-SUFFIX,openai.com.cdn.cloudflare.net
+    - DOMAIN-REGEX,^chatgpt-async-webps-prod-\S+-\d+\.webpubsub\.azure\.com$
+    - DOMAIN,o33249.ingest.sentry.io
+    - DOMAIN,openaicom.imgix.net
+    - DOMAIN,browser-intake-datadoghq.com
